ex5- DONE. include runing